[gd_scene load_steps=7 format=3 uid="uid://rvy5gfou52wx"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_y06ki"]
[ext_resource type="Texture2D" uid="uid://dh588mh166ua3" path="res://PNG/Man Blue/manBlue_reload.png" id="2_1t0v3"]
[ext_resource type="Texture2D" uid="uid://cffnpmif45h6h" path="res://PNG/Man Blue/manBlue_machine.png" id="3_jtp6d"]
[ext_resource type="AudioStream" uid="uid://cox2cnaamgepw" path="res://bullet.wav" id="4_73d4p"]
[ext_resource type="AudioStream" uid="uid://bwhlgke5cs7uo" path="res://fight.wav" id="5_qnkwd"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7cmb2"]
radius = 14.0

[node name="Player" type="CharacterBody2D"]
collision_mask = 6
script = ExtResource("1_y06ki")
speed = 250
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_1t0v3")

[node name="Sprite2D2" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_jtp6d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5, -1)
shape = SubResource("CapsuleShape2D_7cmb2")

[node name="1" type="Marker2D" parent="."]
position = Vector2(259, 146)

[node name="2" type="Marker2D" parent="."]
position = Vector2(-125, 173)

[node name="3" type="Marker2D" parent="."]
position = Vector2(-160, -89)

[node name="4" type="Marker2D" parent="."]
position = Vector2(253, -66)

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_73d4p")
volume_db = -3.012
pitch_scale = 3.0

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_qnkwd")
volume_db = -23.192
autoplay = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="finished" from="AudioStreamPlayer2D2" to="." method="_on_audio_stream_player_2d_2_finished"]
